# llm-style-fingerprints

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROTOCOL.md  README.md  devto_article.md  generate_results.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
data/claude3/: rewrites.json  rewrites_p2.json
data/gemini/: rewrites.json  rewrites_p2.json
data/gpt4/: rewrites.json  rewrites_p2.json
data/human/: maupassant.json  zola.json
data/mistral/: rewrites.json  rewrites_p2.json
docs/: _config.yml  index.md
docs/assets/css/: style.scss
notebooks/: 01_shift_analysis.ipynb  02_classification.ipynb  03_robustesse.ipynb
paper/: .gitignore  main.tex  refs.bib
scripts/: baselines.py  generate_rewrites.py  improve_baselines.py
src/: __init__.py  data.py  features.py  stats.py  stylometry.py
tests/: test_stats.py
