[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name        = "llm-style-fingerprints"
version     = "0.2.0"
description = "Measuring stylistic regularities in LLM-generated text (French corpus)"
readme      = "README.md"
license     = { file = "LICENSE" }
authors     = [{ name = "Riad Maouchi", email = "riad.maouchi@gmail.com" }]
keywords    = ["stylometry", "LLM", "authorship", "NLP", "GPT-4", "Claude", "Mistral"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"

dependencies = [
    "stylometry-python>=1.4.0",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "scikit-learn>=1.4,<2",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
generate-results = "generate_results:main"

[project.urls]
Homepage   = "https://github.com/riadmaouchi/llm-style-fingerprints"
Repository = "https://github.com/riadmaouchi/llm-style-fingerprints"
Issues     = "https://github.com/riadmaouchi/llm-style-fingerprints/issues"

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
python_files = ["test_*.py"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select  = ["E", "F", "I", "UP", "B", "SIM"]
ignore  = ["E501"]   # line length géré par le formateur

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert autorisé dans les tests
